--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^4.11.0",
     "react-router": "^6.17.0",
     "react-router-dom": "^6.17.0",
+    "react-toastify": "^9.1.3",
     "resend": "^2.0.0"
   },
   "devDependencies": {
