--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-router": "^6.17.0",
