--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@react-spring/web": "^9.7.3",
+    "aos": "^2.3.4",
     "axios": "^1.7.2",
     "emailjs": "^4.0.3",
     "emailjs-com": "^3.2.0",
