--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@heroicons/react": "^2.1.5",
     "@react-spring/web": "^9.7.3",
     "aos": "^2.3.4",
     "axios": "^1.7.2",
