--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "react-icons": "^4.12.0",
     "react-router": "^6.17.0",
     "react-router-dom": "^6.17.0",
+    "react-slick": "^0.30.2",
     "react-toastify": "^9.1.3",
-    "resend": "^2.0.0"
+    "resend": "^2.0.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
