--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router": "^6.17.0",
     "react-router-dom": "^6.17.0",
     "react-slick": "^0.30.2",
+    "react-timer-hook": "^3.0.7",
     "react-toastify": "^9.1.3",
     "resend": "^2.0.0",
     "slick-carousel": "^1.8.1"
