--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-timer-hook": "^3.0.7",
     "react-toastify": "^9.1.3",
     "resend": "^2.0.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.14.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
