--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-spring/web": "^9.7.3",
     "aos": "^2.3.4",
     "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
     "emailjs": "^4.0.3",
     "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
