--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
+    "react-phone-input-2": "^2.15.1",
     "react-router": "^6.17.0",
     "react-router-dom": "^6.17.0",
     "react-slick": "^0.30.2",
