Added the backend url

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 RESEND_BASE_URL=https://api.resend.com
 REACT_APP_SHEETDB_API=https://sheetdb.io/api/v1/jjsk0slgx4fy2
 Pixel_ID = 6604459609678289
+VITE_API_URL = crm-backend-o6sb.onrender.com
